--- a/Progress Journal/Base.lproj/Main.storyboard
+++ b/Progress Journal/Base.lproj/Main.storyboard
@@ -1,24 +1,140 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="q0Q-LN-Lso">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Progress Journal-->
+        <scene sceneID="tBa-Cg-t9f">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <tableViewController id="ASF-AX-Kvg" customClass="ProgressUpdateTableViewController" customModule="Progress_Journal" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="kZC-n3-KYn">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="progressUpdateCellId" id="Lqy-m8-llg">
+                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Lqy-m8-llg" id="abR-HP-pLG">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="ASF-AX-Kvg" id="Ukg-Gg-iCV"/>
+                            <outlet property="delegate" destination="ASF-AX-Kvg" id="2F8-5M-7BE"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Progress Journal" id="FtF-T8-EdY">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="Bau-fj-R9b"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="eZX-ch-3BJ">
+                            <connections>
+                                <segue destination="yJd-Nf-5Nq" kind="show" identifier="" id="jRe-ZI-sAm"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="yJd-Nf-5Nq" kind="show" identifier="goToCreateProgressUpdate" id="jQB-lk-9O8"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="09O-A1-yBb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="135" y="106"/>
+        </scene>
+        <!--Create Progress Update View Controller-->
+        <scene sceneID="cA2-2V-dkl">
+            <objects>
+                <viewController id="yJd-Nf-5Nq" customClass="CreateProgressUpdateViewController" customModule="Progress_Journal" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="qh9-St-6Mw">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WrF-Vb-iDA">
+                                <rect key="frame" x="20" y="108" width="374" height="374"/>
+                                <color key="backgroundColor" systemColor="secondarySystemFillColor" red="0.47058823529999999" green="0.47058823529999999" blue="0.50196078430000002" alpha="0.16" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="WrF-Vb-iDA" secondAttribute="height" multiplier="1:1" id="rJd-rF-qNd"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Bx-Z9-nAh">
+                                <rect key="frame" x="20" y="502" width="374" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ew3-P5-tbP">
+                                <rect key="frame" x="177" y="544" width="60" height="30"/>
+                                <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="c8Q-o1-Pwl"/>
+                                </constraints>
+                                <state key="normal" title="Add">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="addTapped:" destination="yJd-Nf-5Nq" eventType="touchUpInside" id="KkE-uA-a4y"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6Bx-Z9-nAh" firstAttribute="centerX" secondItem="WrF-Vb-iDA" secondAttribute="centerX" id="34Y-fG-QBd"/>
+                            <constraint firstItem="WrF-Vb-iDA" firstAttribute="leading" secondItem="2dA-ld-EPX" secondAttribute="leading" constant="20" id="6xE-vV-MpJ"/>
+                            <constraint firstItem="Ew3-P5-tbP" firstAttribute="top" secondItem="6Bx-Z9-nAh" secondAttribute="bottom" constant="8" id="8hs-gG-s5i"/>
+                            <constraint firstItem="6Bx-Z9-nAh" firstAttribute="top" secondItem="WrF-Vb-iDA" secondAttribute="bottom" constant="20" id="H8o-9G-0XJ"/>
+                            <constraint firstItem="WrF-Vb-iDA" firstAttribute="top" secondItem="2dA-ld-EPX" secondAttribute="top" constant="20" id="IKf-XS-hqa"/>
+                            <constraint firstItem="Ew3-P5-tbP" firstAttribute="centerX" secondItem="6Bx-Z9-nAh" secondAttribute="centerX" id="O5o-M3-57A"/>
+                            <constraint firstItem="6Bx-Z9-nAh" firstAttribute="width" secondItem="WrF-Vb-iDA" secondAttribute="width" id="pbr-JD-abu"/>
+                            <constraint firstItem="2dA-ld-EPX" firstAttribute="trailing" secondItem="WrF-Vb-iDA" secondAttribute="trailing" constant="20" id="pdZ-il-rOj"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="2dA-ld-EPX"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="0Lz-xF-r69">
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="camera" id="fEs-Mq-9Su">
+                                <connections>
+                                    <action selector="cameraTapped:" destination="yJd-Nf-5Nq" id="94P-8R-I69"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem systemItem="organize" id="p08-ys-n4P">
+                                <connections>
+                                    <action selector="exsistingPhotoTapped:" destination="yJd-Nf-5Nq" id="K3e-bM-AZ9"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="addButton" destination="Ew3-P5-tbP" id="Ck3-zm-Btj"/>
+                        <outlet property="photoImageview" destination="WrF-Vb-iDA" id="T3r-WV-A7S"/>
+                        <outlet property="titleTextField" destination="6Bx-Z9-nAh" id="h52-dV-YBc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xcR-Ba-j9N" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="866.66666666666674" y="105.80357142857143"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="FJm-lY-bVo">
+            <objects>
+                <navigationController id="q0Q-LN-Lso" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qUV-MS-f7P">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="ASF-AX-Kvg" kind="relationship" relationship="rootViewController" id="F0p-TX-6yJ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7cU-R0-o93" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-619" y="106"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="jQB-lk-9O8"/>
+    </inferredMetricsTieBreakers>
 </document>
